--- a/Sistem Keuangan Daarul Jannah/static/CSS/style.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/style.css
@@ -300,7 +300,7 @@ tr:nth-child(even) {
 
 .card{
     width: 100%;
-    height: 50%;
+    /* height: 50%; */
     border-radius: 15px;
     padding: 20px;
     box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
@@ -346,3 +346,20 @@ tr:nth-child(even) {
 .cmd-btn a{
     margin: 5px;
 }
+
+.preview{
+    border: 1px solid black;
+    height: 300px;
+    text-align: center;
+    font-size: 50px;
+    position: relative;
+}
+
+.preview i {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
