--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -5,6 +5,7 @@
         {% block head%}
         <title>Tambah Data Siswa - Sistem Pembayaran DJ</title>
         <script>document.title = "Tambah Data Siswa - Sistem Pembayaran DJ"</script>
+        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
 
@@ -15,38 +16,24 @@
                 <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
                     
                 <div class="card">
+                    <form action="/tambah_siswa" method="post" enctype="multipart/form-data">
                     <div class="wrap-data">
-                        <img src="{{ url_for('static', filename='Image/foto-siswa.png') }}" class="ft-siswa" alt="">
-                        <form action="/tambah_siswa" method="post">
+                        <div class="preview ft-siswa">
+                            <i class="fa fa-plus"></i>
+                        </div>
+                        
                             
                         <table class="tb-detail-siswa">
-                            <form action="/tambah_siswa" method="post" enctype="multipart/form-data">
+                            
                                 <tr>
                                     <td><b>Nama</b></td>
                                     <td><b>:</b></td>
                                     <td><input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa"></td>
                                 </tr>
                                 <tr>
-                                    <td><b>Kelas</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Kelas" name="kelas"></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Jenis Kelamin</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Jenis Kelamin" name="jenis_kelamin"></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Status</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Status" name="status"></td>
-                                </tr>
-                                <tr>
                                     <td><b>NIS</b></td>
                                     <td><b>:</b></td>
                                     <td><input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis"></td>
-                                </tr>
-                                <tr>
                                     <td><b>NISN</b></td>
                                     <td><b>:</b></td>
                                     <td><input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn"></td>
@@ -55,7 +42,19 @@
                                     <td><b>Tingkat</b></td>
                                     <td><b>:</b></td>
                                     <td><input type="text" id="floatingInput" placeholder="Masukkan Tingkat" name="tingkat"></td>
+                                    <td><b>Kelas</b></td>
+                                    <td><b>:</b></td>
+                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Kelas" name="kelas"></td>
                                 </tr>
+                                <tr>
+                                    <td><b>Status</b></td>
+                                    <td><b>:</b></td>
+                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Status" name="status"></td>
+                                    <td><b>Jenis Kelamin</b></td>
+                                    <td><b>:</b></td>
+                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Jenis Kelamin" name="jenis_kelamin"></td>
+                                </tr>
+                                
                                 <tr>
                                     <td><b>Foto Siswa</b></td>
                                     <td><b>:</b></td>
@@ -63,12 +62,10 @@
                                         <input type="file" name="foto_siswa">
                                     </td>
                                 </tr>
-                                <input type="submit" value="submit">
-                            </form>
                         </table>
-                        <input type="submit" value="submit">
-                        </form>
-                    </div>
+                        </div>
+                    <input type="submit" value="submit">
+                    </form>
                 </div>
                 <br>
             </div>
