--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -12,7 +12,7 @@
     <!-- Sidebar -->
             {% block body %}
             <div class="container">
-                <h1 class="page-title">Detail Data Siswa/i Daarul Jannah</h1>
+                <h1 class="page-title">Ubah Data Siswa/i Daarul Jannah</h1>
                 <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
                     
                 <div class="card">
