--- a/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
@@ -20,7 +20,8 @@
                     <div class="siswa-group">
                         <h4 class="text">Data Siswa/i</h4>
                         <div class="tabel-siswa wrap-data half-card">
-                            <img src="../static/Image/foto-siswa.png" class="foto-siswa" alt="">
+                            {% set foto_siswa = "foto_siswa/" + siswa.foto_path %}
+                            <img src="{{ url_for('static', filename = foto_siswa) }}" class="foto-siswa" alt="">
                             <div class="detail-siswa">
                                 <!-- <p><b>Nama     :</b> {{siswa.nama_siswa}} </p>
                                 <p><b>Kelas    :</b> {{siswa.kelas}}</p>
