--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -40,7 +40,7 @@
                                     <td><b>Kelas</b></td>
                                     <td><b>:</b></td>
                                     <td>
-                                        <select required>
+                                        <select name="kelas" required>
                                             <option value="1D">1D</option>
                                         </select>
                                     </td>
@@ -49,7 +49,7 @@
                                     <td><b>Jenis Kelamin</b></td>
                                     <td><b>:</b></td>
                                     <td>
-                                        <select required>
+                                        <select name="jenis_kelamin"required>
                                             <option value="Laki-laki">Laki-laki</option>
                                             <option value="Perempuan">Perempuan</option>
                                         </select>
@@ -59,7 +59,7 @@
                                     <td><b>Status</b></td>
                                     <td><b>:</b></td>
                                     <td>
-                                        <select required>
+                                        <select name="statusS" required>
                                             <option value="Reguler">Reguler</option>
                                         </select>
                                     </td>
