--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -2,39 +2,39 @@
 html, body {
     height: 100%;
     font-family: "Poppins", sans-serif !important;
-    /* font-family:'Segoe UI',  Verdana, sans-serif; */
+    /* font-size: calc(0.75em + 0.5vmin); */
     background-color: #FAFAFA;
     margin:0px;
 }
 .parent {
     display: grid;
-    grid-template-columns: 0.65fr repeat(3, 1fr);
-    grid-template-rows: repeat(7, 1fr) 0.75fr;
+    grid-template-columns: 0.75fr repeat(4, 1fr);
+    grid-template-rows: 0.45fr repeat(3, 1fr) 0.3fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
 
 .side { 
-    grid-area: 1 / 1 / 9 / 2; 
-    height: 100%;
+    grid-area: 1 / 1 / 6 / 2; 
+    height: 100vh;
     background-color:#056A31;
 }
 .top {
-    grid-area: 1 / 2 / 2 / 5;
-    border-bottom: 2px solid #056A31;
-    padding: 20px;
+    grid-area: 1 / 2 / 2 / 6; 
+    border-bottom: 1px solid #CCCCCC;
+    padding: 1%;
     color:black !important;
  }
 .middle { 
-    grid-area: 2 / 2 / 8 / 5; 
+    grid-area: 2 / 2 / 5 / 6; 
     margin: 20px;
 }
 .footer { 
-    grid-area: 8 / 2 / 9 / 5; 
+    grid-area: 5 / 2 / 6 / 6;  
     text-align: center;
-    padding: 20px;
+    padding: 1%;
     color: #ccc;
-
+    margin: 0;
 }
 
 .sidebar{
@@ -78,7 +78,7 @@ html, body {
     text-align: center;
 }
 
-ul, li,a{
+ul, li, a{
     list-style-type: none;
     text-decoration: none;
     color: white;
@@ -103,8 +103,8 @@ nav a{
     background-color: white;
 }
 
-nav a h4{
-    padding-top: 5px;
+nav a h5{
+    padding-top: 4%;
     font-weight: normal;
     width: 50%;
 }
@@ -195,4 +195,111 @@ nav a h4{
 
 .logout-btn:hover{
     background-color: #820000  !important;
+}
+
+.page-title{
+    font-weight: bolder;
+    font-size: 1.75vw;
+    margin: 0;
+}
+
+.sub-title{
+    font-size: 1vw;
+}
+
+.filter{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 2%;
+    margin-bottom:2%;
+}
+
+
+.filter-kanan{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.filter-kiri select{
+    margin: 0;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #CCCCCC;
+    font-weight: bolder;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.p-btn{
+    background-color: #056A31;
+    padding: 10px;
+    font-size: 0.9vw;
+    border-radius: 5px;
+    margin-right: 10px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.p-btn:hover{
+    opacity: 0.8;
+}
+
+.search-bar{
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid #CCCCCC;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.search-bar select, .search-bar input{
+    height: 96%;
+    border: none;
+    border-radius: 5px;
+    font-weight: bolder;
+}
+
+select:focus, input:focus{
+    outline: none;
+}
+
+table{
+    width: 100%;
+    border: 1px solid #CCCCCC;
+    border-radius: 1em;
+    padding: 10px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    font-size: 0.9vw;
+}
+
+th,td{
+    text-align: center;
+    color: black !important;
+    padding: 5px;
+}
+
+.table a{
+    color: black;
+    font-size: 0.9vw;
+}
+
+.table tr:hover{
+    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
+    -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
+    -moz-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
+}
+
+.table th {
+    pointer-events: none;
+}
+.table tr:nth-child(even) {
+    background-color: white;
 }
