--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>Dashboard - Sistem Pembayaran DJ</title>
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='Image/Icon1.png') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='CSS/base.css') }}">
+        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}"> -->
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,60 +14,76 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        
-        <!-- CSS -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
-        <link rel="icon" type="image/png" href="{{ url_for('static', filename='Image/Icon1.png') }}">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
         {% block head%}
         {% endblock %}
     </head>
     <body>
-        <!-- Sidebar -->
-        <nav>
-            <ul>
-                <li class="logo"><img src="{{ url_for('static', filename='Image/logo-sekolah.png') }}" class="schlogo"></li>
-                <li class="tag-logo">Sistem Keuangan Sekolah Islam Plus Daarul Jannah</li>
-                <li><a href="/manajemen_siswa"><i class="fa fa-users"></i>&nbsp;  Data Siswa/i</a></li>
-            </ul>
-        </nav>
-
-        <div class="wrapper">
-            <div class="header">
-                <div class="profil">
-                    <div class="wrap-profil-konten dropdown">
-                        <a class="konten-profil dropdown-toggle"data-toggle="dropdown">
-                            <div class="teks-profil">
-                                <h5>{{session['nama']}}</h5>
-                                <h6>{{session['nip']}}</h6>
-                            </div>
-                            <img src="{{ url_for('static', filename='Image/foto-siswa.png') }}" class="foto-profil">
-                        </a>
-                        <ul class="dropdown-menu" style="width:200px;padding:10px ">
-                          <li><a href="" class="disabled">Otoritas: {{session['otoritas']}}</a></li>
-                          <li><a href="/logout" class="logout-btn">logout</a></li>
-                        </ul>
-                      </div>
-                   
+        <div class="parent">
+            
+            <!-- sidebar -->
+            <div class="side"> 
+                <div class="sidebar">
+                    <img src="../static/Image/logo-sekolah.png" class="side-logo">
+                    <p>Sistem Pembayaran Sekolah Islam Plus Daarul Jannah</p>
+                    
                 </div>
-                
+                <div class="menu">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="/manajemen_siswa" class="li-menu">
+                                    <i class="fa fa-users"></i>&emsp;
+                                    <h5 >Data Siswa/i</h5>
+                                </a>
+                            </li>
+                            
+                        </ul>
+                    </nav>
+                    
+                </div>
             </div>
-            <div class="section">
 
+            <!-- header -->
+            <div class="top">
                 
+                <div class="dropdown" style="float:right;">
+                    <button class="dropbtn">
+                        <img src="../static/Image/foto-siswa.png" class="foto-profil">
+                    </button>
+                    <div class="dropdown-content" style="width:200px;padding:10px ">
+                        <li><a href="" class="disabled" style="color:rgb(155, 155, 155)">Otoritas: {{session['otoritas']}}</a></li>
+                        <li><a href="/logout" class="logout-btn">logout</a></li>
+                    </div>
+                </div>
+                <div style="float:right;padding-right:10px">
+                    <h4>Ija Panjul</h4>
+                    <p>119140130</p>
+                </div>
+            </div>
 
+            <!-- main -->
+            <div class="middle">
                 {% block body %}
                 {% endblock %}
-                
             </div>
-            
+
+            <!-- footer -->
+            <div class="footer">
+                <p>Copyright 2022</p>
+            </div>
+
+           
         </div>
-        
+
+            
     </body>
 </html>
+
+
