--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         {% block head%}
-        <title>Dashboard - Sistem Pembayaran DJ</title>
-        
+        <title>Detail Data Siswa - Sistem Pembayaran DJ</title>
+        <script>document.title = "Detail Data Siswa - Sistem Pembayaran DJ"</script>
         {% endblock %}
     </head>
 
