--- a/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
@@ -5,7 +5,7 @@
     <head>
         {% block head %}
             <!-- <title>Riwayat Pembayaran - Sistem Pembayaran DJ</title> -->
-            <script>document.title = "Riwayat Pembayaran - Sistem Pembayaran DJ"</script>
+            <script>document.title = "Pembayaran - Sistem Pembayaran DJ"</script>
         {% endblock %}
     </head>
 
@@ -52,7 +52,7 @@
                                     </tr>
                                     
                                     <tr>
-                                        <td><b>Sex</b></td>
+                                        <td><b>Jenis Kelamin</b></td>
                                         <td><b>:</b></td>
                                         <td>{{siswa.jenis_kelamin}}</td>
                                         <td><b>Status</b></td>
