--- a/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
@@ -41,7 +41,7 @@
                                         <td>{{siswa.kelas}}</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Sex</b></td>
+                                        <td><b>Jenis Kelamin</b></td>
                                         <td><b>:</b></td>
                                         <td>{{siswa.jenis_kelamin}}</td>
                                     </tr>
