--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -292,6 +292,7 @@ th,td{
 }
 
 .table tr:hover{
+    border-radius: 5px;
     box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
     -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
     -moz-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
@@ -300,6 +301,13 @@ th,td{
 .table th {
     pointer-events: none;
 }
-.table tr:nth-child(even) {
-    background-color: white;
+
+.column{
+    display: flex;
+    flex-direction: column;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
 }
