--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -12,7 +12,7 @@
 
     <body>
         {%block body%}
-        <div class="container">
+        <div >
             <h1 class="page-title">Data Siswa/i Sekolah Daarul Jannah</h1>
             <h4 class="sub-title">Sistem Keuangan Sekolah Daarul Jannah</h4>
 
@@ -31,7 +31,7 @@
                 </div>
                 <div class="filter-kanan">
                     <a href="/tambah_siswa">
-                        <p class="p-btn">Tambah Data Siswa/i</p>
+                        <p class="p-btn btn">Tambah Data Siswa/i</p>
                     </a>
                     <div class="search-bar">
                         <select id="search-bar-filter" onchange="searchBarClear()">
@@ -45,7 +45,7 @@
             </div>
             
             <div class="table" id="data_siswa">
-                <table>
+                <table class="shadow">
                     <tr>
                         <th>NIS</th>
                         <th>Nama Siswa/i</th>
