--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -9,25 +9,28 @@ html, body {
 .parent {
     display: grid;
     grid-template-columns: 0.75fr repeat(4, 1fr);
-    grid-template-rows: 0.45fr repeat(3, 1fr) 0.3fr;
+    grid-template-rows: 0.35fr repeat(3, 1fr) 0.3fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    height: 100vh;
 }
 
 .side { 
     grid-area: 1 / 1 / 6 / 2; 
-    height: 100vh;
+    /* height: 100vh; */
     background-color:#056A31;
 }
 .top {
     grid-area: 1 / 2 / 2 / 6; 
     border-bottom: 1px solid #CCCCCC;
-    padding: 1%;
+    padding: 0.5%;
     color:black !important;
  }
 .middle { 
     grid-area: 2 / 2 / 5 / 6; 
-    margin: 20px;
+    padding: 20px;
+    grid-auto-rows: 500px;
+    overflow: auto;
 }
 .footer { 
     grid-area: 5 / 2 / 6 / 6;  
@@ -126,12 +129,6 @@ nav a h5{
     border-radius:100px;
 }
 
-/* .konten-profil{
-    display: flex;
-    flex-direction: row;
-    width: fit-content;
-    padding: 10px;
-} */
 .konten-profil:hover{
     cursor:pointer;
 }
@@ -168,10 +165,9 @@ nav a h5{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-  
+
 .dropdown-content a {
-    /* color: black; */
-    /* padding: 12px 16px; */
+    padding-bottom: 10px;
     text-decoration: none;
     display: block;
     font-size: 14px;
@@ -245,24 +241,36 @@ nav a h5{
     -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
 }
 
-.p-btn:hover{
+.btn:hover{
     opacity: 0.8;
 }
 
 .search-bar{
-    border-radius: 5px;
     background-color: white;
     border: 1px solid #CCCCCC;
+    padding: 2px;
+    border-radius: 5px;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
 }
 
-.search-bar select, .search-bar input{
-    height: 96%;
+.search-bar select, .search-bar input, .dtl-style select, .dtl-style input{
+    height: 100%;
     border: none;
-    border-radius: 5px;
     font-weight: bolder;
+    padding: 0;
+    padding-left: 10px;
+    background-color: transparent;
+    
+}
+
+.dtl-style select, .dtl-style input{
+    width: 100%;
+}
+
+.search-bar select{
+    border-right: 1px solid #ccc;
 }
 
 select:focus, input:focus{
@@ -274,6 +282,9 @@ table{
     border: 1px solid #CCCCCC;
     border-radius: 1em;
     padding: 10px;
+}
+
+.shadow{
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
@@ -311,3 +322,84 @@ th,td{
     display: flex;
     flex-direction: row;
 }
+
+.ft-siswa{
+    width: 150px;
+    height: 200px;
+    border-radius: 15px;
+}
+
+.card{
+    padding: 2.5%;
+    border: 1px solid #CCCCCC;
+    border-radius: 15px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.card-nosh{
+    border: 1px solid #CCCCCC;
+    border-radius: 15px;
+    padding: 2%;
+    /* margin:10px; */
+    min-height: 85%;
+}
+
+.container{
+    margin-top: 2%;
+    margin-bottom:2%;
+}
+
+.fl-stretch{
+    align-items: stretch; 
+    width:100%
+}
+
+.fl-stretch > div{
+    flex: 1;
+}
+
+.detail{
+    margin: 5px;
+    width: 100%;
+}
+
+.detail h4{
+    padding: 5px;
+    min-width: fit-content;
+}
+
+.detail p{
+    padding: 5px;
+    min-width: fit-content;
+}
+
+.dtl-style{
+    border: 1px solid #CCCCCC;
+    width: 100%;
+    border-radius: 10px;
+    /* padding: 5px; */
+}
+
+.ch-btn{
+    background-color: #056A31;
+    padding: 10px;
+    font-size: 0.8vw;
+    border-radius: 10px;
+}
+
+.del-btn{
+    background-color: #820000;
+    font-size: 0.8vw;
+    padding: 10px;
+    border-radius: 10px;
+    margin-left:10px;
+}
+
+.cmd-btn{
+    margin-top: 3%;
+    /* margin-bottom: 3%; */
+    padding: 0;
+}
+
