--- a/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/riwayat_pembayaran.html
@@ -11,24 +11,125 @@
 
     <body>
         {% block body %}
-        <div class="container mx-auto">
-            <h1 class="page-title">Data Pembayaran Siswa/i Sekolah Daarul Jannah</h1>
-            <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
-            
+        
+        <h1 class="page-title">Data Pembayaran Siswa/i Sekolah Daarul Jannah</h1>
+        <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
+        
+        <div class="container">
             <div class="card">
-                <div class="riwayat">
+                <div class="row fl-stretch" style="margin-bottom:2%">
+                    <div class="column" >
+                        <h4 class="text">Data Siswa/i</h4>
+                        <div class="card-nosh" style="margin-right:10px">
+                            <div class="row " style="align-items:center;justify-content:center;">
+                                <img src="../static/foto_siswa/1549425553128.png" class="ft-siswa" alt="foto orang"  style="margin-right:2%">
+                                <div class="column">
+                                    <div class="row detail">
+                                        <h4>Nama</h4>
+                                        <h4>:</h4>
+                                        <p>{{siswa.nama_siswa}}</p>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>Kelas</h4>
+                                        <h4>:</h4>
+                                        <p>{{siswa.kelas}}</p>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>Sex</h4>
+                                        <h4>:</h4>
+                                        <p>{{siswa.jenis_kelamin}}</p>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>Status</h4>
+                                        <h4>:</h4>
+                                        <p>{{siswa.status}}</p>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>NIS</h4>
+                                        <h4>:</h4>
+                                        <p>{{siswa.nis}}</p>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>NISN</h4>
+                                        <h4>:</h4>
+                                        <p>{{siswa.nisn}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h4 class="text" style="margin-left:10px">Rincian Tagihan</h4>
+                        <div class="card-nosh" style="margin-left:10px">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div>
+                    <h4 class="text">Riwayat Pembayaran Siswa/i</h4>
+                    <table >
+                        <thead>
+                            <th>Tanggal Pembayaran</th>
+                            <th>SPP</th>
+                            <th>Tabungan Wajib</th>
+                            <th>Katering</th>
+                            <th>Jemputan</th>
+                            <th>Ekskul</th>
+                            <th>Majelis Sekolah</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>09/02/2021</td>
+                                <td>Rp.690.000,-</td>
+                                <td>Rp.690.000,-</td>
+                                <td>Rp.690.000,-</td>
+                                <td>Rp.690.000,-</td>
+                                <td>Rp.690.000,-</td>
+                                <td>Rp.690.000,-</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- <div class="histori-group">
+                    <h4 class="text">Riwayat Pembayaran Siswa/i</h4>
+                        <div class="tabel-histori mx-auto">
+                        <div class="scrollable1">
+                            <table border='1' class="table table-borderless table-hover mx-auto">
+                                <thead>
+                                    <th>Tanggal Pembayaran</th>
+                                    <th>SPP</th>
+                                    <th>Tabungan Wajib</th>
+                                    <th>Katering</th>
+                                    <th>Jemputan</th>
+                                    <th>Ekskul</th>
+                                    <th>Majelis Sekolah</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>09/02/2021</td>
+                                        <td>Rp.690.000,-</td>
+                                        <td>Rp.690.000,-</td>
+                                        <td>Rp.690.000,-</td>
+                                        <td>Rp.690.000,-</td>
+                                        <td>Rp.690.000,-</td>
+                                        <td>Rp.690.000,-</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div> -->
+
+                <!-- <div class="riwayat">
                     <div class="siswa-group">
                         <h4 class="text">Data Siswa/i</h4>
                         <div class="tabel-siswa wrap-data half-card">
                             {% set foto_siswa = "foto_siswa/" + siswa.foto_path %}
                             <img src="{{ url_for('static', filename = foto_siswa) }}" class="foto-siswa" alt="">
                             <div class="detail-siswa">
-                                <!-- <p><b>Nama     :</b> {{siswa.nama_siswa}} </p>
-                                <p><b>Kelas    :</b> {{siswa.kelas}}</p>
-                                <p><b>Kelamin  :</b> {{siswa.jenis_kelamin}}</p>
-                                <p><b>Status   :</b> {{siswa.status}}</p>
-                                <p><b>NIS      :</b> {{siswa.nis}}</p>
-                                <p><b>NISN     :</b> {{siswa.nisn}}</p> -->
                                 <table class="tb-detail-siswa">
                                     <tr>
                                         <td><b>Nama</b></td>
@@ -113,10 +214,11 @@
                             </table>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
-            
         </div>
+            
+            
         {% endblock %}
     </body>
 </html>
