--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -11,110 +11,125 @@
 
     <body>
         {% block body %}
-            <div class="container">
-                <h1 class="page-title">Tambah Data Siswa/i Sekolah Daarul Jannah</h1>
-                <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
-                    
-                <div class="card">
-                    <form action="/tambah_siswa" method="post" enctype="multipart/form-data">
-                    <div class="row">
-                        <div class="preview ft-siswa">
-                            <i class="fa fa-plus"></i>
-                        </div>
-                        
-                        <div class="column">
-                            <div class="row">
-                                <p>Nama</p>
-                                <p>:</p>
-                                <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required>
-                            </div>
-                            
-                        </div>    
-                        <!-- <table class="tb-detail-siswa">
-                            
-                                <tr>
-                                    <td><b>Nama</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required></td>
-                                </tr>
-                                <tr>
-                                    <td><b>NIS</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" required></td>
-                                    <td><b>NISN</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn"></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Tingkat</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="tingkat" required>
-                                            <option value="TK">
-                                                Taman Kanak-Kanak
-                                            </option>
-                                            <option value="SD">
-                                                Sekolah Dasar
-                                            </option>
-                                            <option value="SMP">
-                                                Sekolah Menengah Pertama
-                                            </option>
-                                        </select>
-                                    </td>
-                                    <td><b>Kelas</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="kelas" required>
-                                            <option value="Pilih Tingkat" disabled>
-                                                Pilih Tingkat Terlebih Dahulu
-                                            </option>
-                                        </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Status</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="status" required>
-                                            <option value="Reguler">
-                                                Reguler
-                                            </option>
-                                            <option value="Yayasan">
-                                                Yayasan
-                                            </option>
-                                            <option value="Inklusi">
-                                                Inklusi
-                                            </option>
-                                        </select>
-                                    </td>
-                                    <td><b>Jenis Kelamin</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="jenis_kelamin" required>
-                                            <option value="Laki-laki">
-                                                Laki-laki
-                                            </option>
-                                            <option value="Perempuan">
-                                                Perempuan
-                                            </option>
-                                        </select>
-                                    </td>
-                                </tr>
+            <h1 class="page-title">Tambah Data Siswa/i Sekolah Daarul Jannah</h1>
+            <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
+
+            <form action="/tambah_siswa" method="post" enctype="multipart/form-data">
+                <div class="container">
+                    <div class="card">
+                        <div class="row fl-stretch">
+                            <img id="pic" class="ft-siswa" style="margin-right:5%; margin-left:5%"/>
+                            <!-- <img src="../static/foto_siswa/1549425553128.png" > -->
+                            <div >
+                                <div class="row detail">
+                                    <h4>Nama</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required>
+                                    </div>
+                                </div>
+                                   
+                                <div class="row">
+                                    <div class="row detail">
+                                        <h4>NIS</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" required>
+                                        </div>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>NISN</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn">
+                                        </div>
+                                    </div>
+                                </div>
                                 
-                                <tr>
-                                    <td><b>Foto Siswa</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <input type="file" name="foto_siswa">
-                                    </td>
-                                </tr>
-                        </table> -->
+                                <div class="row">
+                                    <div class="row detail">
+                                        <h4>Tingkat</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="tingkat" required>
+                                                <option value="TK">
+                                                    Taman Kanak-Kanak
+                                                </option>
+                                                <option value="SD">
+                                                    Sekolah Dasar
+                                                </option>
+                                                <option value="SMP">
+                                                    Sekolah Menengah Pertama
+                                                </option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>Kelas</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="kelas" required>
+                                                <option value="7D">Kelas 7D</option>
+                                                <option value="7J">Kelas 7J</option>
+                                                <option value="7I">Kelas 7I</option>
+                                                <option value="7P">Kelas 7P</option>
+                                                <option value="8D">Kelas 8D</option>
+                                                <option value="8J">Kelas 8J</option>
+                                                <option value="8I">Kelas 8I</option>
+                                                <option value="8P">Kelas 8P</option>
+                                                <option value="9D">Kelas 9D</option>
+                                                <option value="9J">Kelas 9J</option>
+                                                <option value="9I">Kelas 9I</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                    
+                                <div class="row">
+                                    <div class="row detail">
+                                        <h4>Jenis Kelamin</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="jenis_kelamin" required>
+                                                <option value="Laki-laki">Laki-laki</option>
+                                                <option value="Perempuan">Perempuan</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4>Status</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="status" required>
+                                                <option value="Reguler">Reguler</option>
+                                                <option value="Yayasan">Yayasan</option>
+                                                <option value="Inklusi">Inklusi</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="row detail">
+                                    <h4>Foto</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <input type="file" name="foto_siswa" oninput="pic.src=window.URL.createObjectURL(this.files[0])" required>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                                
                         </div>
-                    <input type="submit" value="submit">
-                    </form>
-                </div>
-                <br>
-            </div>
+                        <div class="row cmd-btn" style="justify-content:flex-end;">
+                            <a >
+                                <input type="submit" value="submit" class="ch-btn btn">
+                                
+                            </a>
+                        </div> 
+                    </div>
+                </div> 
+                </form>
+
         {% endblock %}
     </body>
 </html> 
