--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -11,35 +11,51 @@
 <body>
     <!-- Sidebar -->
             {% block body %}
+            <h1 class="page-title">Ubah Data Siswa/i Daarul Jannah</h1>
+            <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
+            <form action="{{ url_for('ubah_siswa', nis = siswa['nis']) }}" method="post">
             <div class="container">
-                <h1 class="page-title">Ubah Data Siswa/i Daarul Jannah</h1>
-                <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
-                    
                 <div class="card">
-                    <div class="wrap-data">
-                        {% set foto_siswa = "foto_siswa/" + siswa.foto_path %}
-                        <img src="{{ url_for('static', filename = foto_siswa) }}" class="ft-siswa" alt="">
-                        <table class="tb-detail-siswa">
-                            <form action="{{ url_for('ubah_siswa', nis = siswa['nis']) }}" method="post">
-                                <tr>
-                                    <td><b>NIS</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" value="{{siswa.nis}}" readonly></td>
-                                </tr>
-                                <tr>
-                                    <td><b>NISN</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn" required value="{{siswa.nisn}}"></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Nama</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required value="{{siswa.nama_siswa}}"></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Kelas</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
+                    <div class="row fl-stretch">
+                        <img src="../static/foto_siswa/1549425553128.png" class="ft-siswa" alt="foto orang" style="margin-right:5%; margin-left:5%">
+                        <div >
+                            <div class="row detail">
+                                <h4>Nama</h4>
+                                <h4>:</h4>
+                                <div class="dtl-style">
+                                    <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required value="{{siswa.nama_siswa}}">
+                                </div>
+                            </div>
+                               
+                            <div class="row">
+                                <div class="row detail">
+                                    <h4>NIS</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" value="{{siswa.nis}}" readonly>
+                                    </div>
+                                </div>
+                                <div class="row detail">
+                                    <h4>NISN</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn" required value="{{siswa.nisn}}">
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="row detail">
+                                    <h4>Tingkat</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <h4>{{siswa.nama_siswa}}</h4>
+                                    </div>
+                                </div>
+                                <div class="row detail">
+                                    <h4>Kelas</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
                                         <select name="kelas"  required>
                                             {% if tingkat == "TK" %}
                                                 <option value="A DAHLIA">Kelas A Dahlia</option>
@@ -85,41 +101,46 @@
                                                 <option value="9I">Kelas 9I</option>
                                             {% endif %}
                                         </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Jenis Kelamin</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
+                                    </div>
+                                </div>
+                            </div>
+                                
+                            <div class="row">
+                                <div class="row detail">
+                                    <h4>Jenis Kelamin</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
                                         <select name="jenis_kelamin" required>
                                             <option value="Laki-laki">Laki-laki</option>
                                             <option value="Perempuan">Perempuan</option>
                                         </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Status</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
+                                    </div>
+                                </div>
+                                <div class="row detail">
+                                    <h4>Status</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
                                         <select name="status" required>
                                             <option value="Reguler">Reguler</option>
                                             <option value="Yayasan">Yayasan</option>
                                             <option value="Inklusi">Inklusi</option>
                                         </select>
-                                    </td>
-                                </tr>
-                                <div class="cmd-btn">
-                                    <input type="submit" class="btn btn-success" value="Simpan Data Siswa/i">
+                                    </div>
                                 </div>
-                            </form>
-                        </table>
+                            </div>
+
+                            
+                        </div>
+                            
                     </div>
+                    <div class="row cmd-btn" style="justify-content:flex-end;">
+                        <a >
+                            <p class="ch-btn btn">Simpan Data Siswa/i</p>
+                        </a>
+                    </div> 
                 </div>
-                    
-                    <br>
-                    
-                </div>
-            </div>
+            </div> 
+            </form>
             {% endblock %}
 
 </body>
